2004-10-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* authors/index.php:
	* news/index.php:
	* documentation/faq/index.php:
	regenerated

	* definitions.inc:
	updated for 2.5.12

2004-09-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* authors/index.php:
	* news/index.php:
	* documentation/faq/index.php:
	regenerated

	* definitions.inc:
	updated for 2.5.11 and 2.4.19

2004-08-14  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	* web-theme/classes/blue_class.inc:
	* web-theme/themes/blue_theme.inc:
	Fixed variable access to avoid error logs.

	* robots.txt:
	Added robots.txt to avoid error messages.

2004-08-12  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	* links.php:
	Added link from Andrew Dolgov.

2004-08-10  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	* almost all files:
	changed php code so that it does not produce warnings

2004-08-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* contact/index.php:
	added rules for writing list mail.

2004-07-25  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	* donations.php:
	* index.php:
	included donation page in navgen structure

	* screenshots/vectorbuttons/index.php:
	* screenshots/windowdecors/index.php:
	changed settings for pager icon

	* navgen_write/navigation.inc:
	updated due changes in previous php files

	* temporary/helpers/create_pager_icon.sh:
	changed "combine" -> "composite"

	* web-theme/classes/pager_on_top_class.inc:
	fixed "focus" setting when number of subpages is equal to number
	of pages per desk

2004-07-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.php:
	updated wiki link

2004-07-09  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.php:
	* navgen_write/navigation.inc:
	* httpd/error404.php:

2004-06-27  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	* screenshots/desktops/Piotr_Zielinski-1024x768/*:
	added screenshot

	* web-theme/themes/*_theme.inc:
	* web-theme/classes/*_class.inc:
	added links to different themes.

	* index.php:
	some html fixes.

	* screenshots/windowdecors/brushedmetal/: