@@ -1,3 +1,10 @@
+2004-11-08  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>
+
+	* index.php: 
+	* links.php:
+	Added link to new fvwm forum page. Removed link to wiki since it
+	seems to be down.
+
 2004-10-06  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* authors/index.php:
